# anantya-api

./: .gitignore  DOCUMENTATION.md  Dockerfile  README.md  contribute.md  jobs.py  main.py  pyproject.toml  services.py  todo.txt
app/: db.py  jwt_utils.py  limiter.py  main.py
app/data/: city_aliases.json  city_counters.json
app/jobs/: api_mails.py  email_job.py  key_gen.py  onboarding_email.py  password_reset_token.py  sheets_job.py
app/models/: models.py  schemas.py
app/routes/: auth.py  members.py
app/services/: email_verifier.py  id_generator.py  services.py
jobs/: email_job.py
migrations/: env.py
