[project]
name = "anantya-foundation-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi-mail>=1.6.2",
    "fastapi[standard]>=0.133.1",
    "motor>=3.7.1",
    "python-dotenv>=1.2.1",
    "resend>=2.23.0",
]
